fix(settings): not fitting properly on mobile

--- a/apps/client/src/stylesheets/theme-next/pages.css
+++ b/apps/client/src/stylesheets/theme-next/pages.css
@@ -181,15 +181,18 @@ div.note-detail-empty {
 }
 
 .options-section:not(.tn-no-card) {
-    margin: auto;
-    min-width: var(--options-card-min-width);
-    max-width: var(--options-card-max-width);
+    margin: auto;    
     border-radius: 12px;
     border: 1px solid var(--card-border-color) !important;
     box-shadow: var(--card-box-shadow);
     background: var(--card-background-color);
     padding: var(--options-card-padding);
     margin-bottom: calc(var(--options-title-offset) + 26px) !important;
+}
+
+body.desktop .option-section:not(.tn-no-card) {
+    min-width: var(--options-card-min-width);
+    max-width: var(--options-card-max-width);
 }
 
 .note-detail-content-widget-content.options {
